--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@faker-js/faker": "^9.3.0",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.8.1"
   }
 }
