--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
+    "bcryptjs": "^3.0.2",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -21,6 +23,9 @@
     "mongoose": "^8.10.1",
     "mongoose-paginate-v2": "^1.9.0",
     "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.8.1"
   }
 }
