--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "mongoose-paginate-v2": "^1.9.0",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.8.1"
