--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node ./index.js",
-    "dev": "node --watch ./index.js"
+    "dev": "node --watch ./index.js --mode dev",
+    "test": "node --watch ./index.js --mode test"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
     "bcryptjs": "^3.0.2",
+    "commander": "^14.0.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
