--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "commander": "^14.0.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
